Fix sponsors on mobile view

--- a/src/components/hero/sponsors.css
+++ b/src/components/hero/sponsors.css
@@ -121,6 +121,8 @@
   overflow: hidden;
   /* background-color: #dfdbe5; */
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
+    width: 100%;
+    min-height: 150px;
     border-radius: 5vw;
     padding: 0vh 1vw;
   }
